Fixed spacing for Resume button on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,6 +239,12 @@ img {
   border-color: #111;
 }
 
+@media (max-width: 440px) {
+  .btn-second {
+    margin-top: 5px;
+  }
+}
+
 /*-----------------------------------------
 * 04. Header
 -----------------------------------------*/
